[project]
name = "competitive-programming-pypy3"
version = "0.1.0"
description = ""
authors = [
    {name = "takumi-okamoto",email = "okamototakumi227@gmail.com"}
]
license = {text = "CC0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "sympy (==1.11.1)",
    "more-itertools (==9.0.0)",
    "bitarray (>=3.0.0,<4.0.0)",
    "pulp (==2.7.0)",
    "z3-solver (==4.12.1.0)",
    "ac-library-python (>=0.1.0,<0.2.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false